# eudpDashboard

./: README.md  main.py  pyproject.toml
data/: Projects_all_data.xlsx  data_with_topics.csv
data/embeddings/: paraphrase-multilingual-MiniLM-L12-v2.npy
eudp_clustering/notebooks/: cluster_analysis_template.ipynb
plotly_plots/: eudp.py
src/eudp_clustering/notebooks/: cluster_analysis_template.ipynb
