[tool.poetry]
name = "eudpDashboard"
version = "0.1.0"
description = ""
authors = ["MLS <mls@damvad.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
openpyxl = "^3.0.10"
ipykernel = "^6.20.2"
bertopic = "^0.13.0"
nbformat = "^5.7.3"
streamlit = "^1.17.0"
watchdog = "^2.2.1"
nltk = "^3.8.1"
lemmy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
